# Mental-Health-Tracker

./: .gitignore  README.md  demo.ipynb  docker-compose.yml
backend/: .env  Dockerfile  README.md  betterdays.db  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  response_model.py
backend/app/database/: connection.py  get_db.py
backend/app/models/: journal.py  mood.py  user.py
backend/app/routes/: auth.py  daily_quote.py  journal.py  mood.py
backend/app/schemas/: journal.py  mood.py  user.py
better_days/: README.md  pubspec.yaml
better_days/android/app/: build.gradle.kts
better_days/ios/Runner/: Info.plist
better_days/ios/Runner.xcodeproj/: project.pbxproj
better_days/lib/: main.dart
better_days/lib/auth/: login_screen.dart  register_screen.dart
better_days/lib/common/: app_header.dart  daily_quote.dart  loading_spinner.dart  responsive_widget.dart
better_days/lib/dashboard/: custom_app_bar.dart  dashboard_screen.dart  edit_profile.dart  home_tab.dart  profile_screen.dart
better_days/lib/journal/: empty_journal_card.dart  journal_card.dart  journal_create_screen.dart
better_days/lib/models/: api_response.dart
better_days/lib/services/: api_service.dart  auth_service.dart
better_days/lib/utils/: constants.dart
better_days/web/: manifest.json
frontend_better_days/: Dockerfile
frontend_better_days/lib/: main.dart
frontend_better_days/lib/auth/: user_profile.dart
frontend_better_days/lib/common/: app_button.dart  protected_route.dart
frontend_better_days/web/: index.html
(+18 files in other folders)
